--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,7 @@ html {
   font-family: "Inter", sans-serif;
   min-height: 100vh;
   font-size: 16px;
+
 }
 body {
   width: 100vw;
@@ -25,6 +26,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth !important;
+  color: #4B5563;
 }
 
 .fade-enter-active,
@@ -39,8 +41,8 @@ body {
 
 .container {
   inset: 0;
-  margin: 0px auto;
-  max-width: 1206px !important;
+  margin: 0 auto;
+  max-width: 1440px !important;
 }
 
 @media (max-width: 1210px) {
